--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+excerpt: ""
 ---
 
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
@@ -28,6 +29,7 @@ layout: default
         <header>
           {% if page.title %}<h1 id="page-title" class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
           {% include page__meta.html %}
+
         </header>
       {% endunless %}
 
