--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,8 +4,10 @@ layout: archive
 
 {{ content }}
 
-<!-- <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3> -->
-
+<!--
+<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Home" }}</h3>
+-->
+<h3 class="archive__subtitle">Recent Posts</h3>
 {% if paginator %}
   {% assign posts = paginator.posts %}
 {% else %}
@@ -13,6 +15,7 @@ layout: archive
 {% endif %}
 
 {% assign entries_layout = page.entries_layout | default: 'list' %}
+
 <div class="entries-{{ entries_layout }}">
   {% for post in posts %}
     {% include archive-single.html type=entries_layout %}
