--- a/_includes/archive-single_pluscategory.html
+++ b/_includes/archive-single_pluscategory.html
@@ -18,43 +18,10 @@
       </div>
     {% endif %}
 
-    <!--{% include page__meta.html type=include.type %}
-    <span class = 'page__meta-title'>{{post.categories}}</span>-->
-
-    {% assign document = post | default: page %}
-    {% if document.read_time or document.show_date %}
-      <p class="page__meta">
-        {% if document.show_date and document.date %}
-          {% assign date = document.date %}
-          <span class="page__meta-date">
-            <i class="far {% if include.type == 'grid' and document.read_time and document.show_date %}fa-fw {% endif %}fa-calendar-alt" aria-hidden="true"></i>
-            {% assign date_format = site.date_format | default: "%B %-d, %Y" %}
-            <time datetime="{{ date | date_to_xmlschema }}">{{ date | date: date_format }}</time>
-          </span>
-        {% endif %}
-
-        {% if document.read_time and document.show_date %}
-          <span class="page__meta-sep"></span>{% endif %}
-
-        {% if document.read_time %}
-          {% assign words_per_minute = document.words_per_minute | default: site.words_per_minute | default: 200 %}
-          {% assign words = document.content | strip_html | number_of_words %}
-
-          <span class="page__meta-readtime">
-            <i class="far {% if include.type == 'grid' and document.read_time and document.show_date %}fa-fw {% endif %}fa-clock" aria-hidden="true"></i>
-            {% if words < words_per_minute %}
-              {{ site.data.ui-text[site.locale].less_than | default: "less than" }} 1 {{ site.data.ui-text[site.locale].minute_read | default: "minute read" }}
-            {% elsif words == words_per_minute %}
-              1 {{ site.data.ui-text[site.locale].minute_read | default: "minute read" }}
-            {% else %}
-              {{ words | divided_by: words_per_minute }} {{ site.data.ui-text[site.locale].minute_read | default: "minute read" }}
-            {% endif %}
-          </span>
-        {% endif %}
-        Categorized by {{post.categories}}
-      </p>
-    {% endif %}
-
+    {% include page__meta.html type=include.type %}
+    <p class="page__meta">
+      Categorized by {{post.categories}}
+    </p>
 
     <!-- 날짜표시랑 안떨어져 있게 하려고 수정함-->
     <h2 class="archive__item-title no_toc" itemprop="headline" style="margin-top: 0;">
