--- a/_includes/archive-single_plus.html
+++ b/_includes/archive-single_plus.html
@@ -20,7 +20,16 @@
 
     {% include page__meta.html type=include.type %}
     <p class="page__meta">
-      Categorized by {{post.categories}}
+      Categorized by
+      {% for category in post.categories %}
+        {{category}}
+      {% endfor %}
+    </p>
+    <p class="page__meta">
+      Tagged by
+      {% for tag in post.tags %}
+        {{tag}}
+      {% endfor %}
     </p>
 
     <!-- 날짜표시랑 안떨어져 있게 하려고 수정함-->
