--- a/_includes/category-list.html
+++ b/_includes/category-list.html
@@ -8,6 +8,7 @@
 {% if site.category_archive.path %}
   {% assign categories_sorted = page.categories | sort_natural %}
 
+  <!-- 좀더 예쁜 카테고리로 바꿈-
   <p class="page__taxonomy">
     <strong><i class="fas fa-fw fa-folder-open" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].categories_label | default: "Categories:" }} </strong>
     <span itemprop="keywords">
@@ -16,4 +17,15 @@
     {% endfor %}
     </span>
   </p>
+  -->
+
+  <p class="page__taxonomy">
+    <i class="fas fa-fw fa-folder-open" aria-hidden="true"></i> Categories:
+    <span itemprop="keywords">
+    {% for category_word in categories_sorted %}
+      <a href="{{ category_word | slugify | prepend: path_type | prepend: site.category_archive.path | relative_url }}" class="page__taxonomy-item" rel="tag">{{ category_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
+    {% endfor %}
+    </span>
+  </p>
+
 {% endif %}
