--- a/_includes/tag-list.html
+++ b/_includes/tag-list.html
@@ -8,6 +8,7 @@
 {% if site.tag_archive.path %}
   {% assign tags_sorted = page.tags | sort_natural %}
 
+  <!-- 좀더 예쁜 태그로 바꿈
   <p class="page__taxonomy">
     <strong><i class="fas fa-fw fa-tags" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].tags_label | default: "Tags:" }} </strong>
     <span itemprop="keywords">
@@ -16,4 +17,15 @@
     {% endfor %}
     </span>
   </p>
+  -->
+
+  <p class="page__taxonomy">
+    <i class="fas fa-fw fa-tags" aria-hidden="true"></i> Tags:
+    <span itemprop="keywords">
+    {% for tag_word in tags_sorted %}
+      <a href="{{ tag_word | slugify | prepend: path_type | prepend: site.tag_archive.path | relative_url }}" class="page__taxonomy-item" rel="tag">{{ tag_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
+    {% endfor %}
+    </span>
+  </p>
+
 {% endif %}
