--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -10,6 +10,14 @@
   {% assign title = post.title %}
 {% endif %}
 
+<!-- 카테고리, 태그 추가하기위해 패스 추가-->
+{% case site.category_archive.type %}
+  {% when "liquid" %}
+    {% assign path_type = "#" %}
+  {% when "jekyll-archives" %}
+    {% assign path_type = nil %}
+{% endcase %}
+
 <div class="{{ include.type | default: 'list' }}__item">
   <article class="archive__item" itemscope itemtype="https://schema.org/CreativeWork">
     {% if include.type == "grid" and teaser %}
@@ -19,6 +27,26 @@
     {% endif %}
 
     {% include post__meta.html type=include.type %}
+
+    <!-- 카테고리 추가-->
+    <span class="page__meta">
+      <i class="fas fa-fw fa-folder-open" aria-hidden="true"></i>
+      <span itemprop="keywords">
+      {% for category_word in post.categories %}
+        <a href="{{ category_word | slugify | prepend: path_type | prepend: site.category_archive.path | relative_url }}" class="page__taxonomy-item" rel="tag">{{ category_word }}</a>
+      {% endfor %}
+      </span>
+    </span>
+    &nbsp
+    <!--태그추가-->
+    <span class="page__meta">
+      <i class="fas fa-fw fa-tags" aria-hidden="true"></i>
+      <span itemprop="keywords">
+      {% for tag_word in post.tags %}
+        <a href="{{ tag_word | slugify | prepend: path_type | prepend: site.tag_archive.path | relative_url }}" class="page__taxonomy-item" rel="tag">{{ tag_word }}</a>
+      {% endfor %}
+      </span>
+    </span>
 
     <!-- 날짜표시랑 안떨어져 있게 하려고 수정함-->
     <h2 class="archive__item-title no_toc" itemprop="headline" style="margin-top: 0;">
