--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -29,10 +29,10 @@ excerpt: ""
         <header>
           {% if page.title %}<h1 id="page-title" class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
           {% include page__meta.html %}
-          <div class="page__meta" style="margin-top: 0;">
+          <div class="page__meta" style="margin-top: 0; margin-bottom: 0.7em;">
             {% include page__taxonomy.html %}
           </div>
-          <hr style="border: double;">
+          <hr style="border: solid;">
         </header>
       {% endunless %}
 
