side_bar_update

--- a/_includes/archive-single__page.html
+++ b/_includes/archive-single__page.html
@@ -18,7 +18,7 @@
       </div>
     {% endif %}
 
-    {% include post__meta__home.html type=include.type %}
+    {% include post__meta.html type=include.type %}
 
     <!-- 날짜표시랑 안떨어져 있게 하려고 수정함-->
     <h2 class="archive__item-title no_toc" itemprop="headline" style="margin-top: 0;">
