--- a/_includes/post__meta.html
+++ b/_includes/post__meta.html
@@ -1,47 +1,67 @@
 {% assign document = post | default: page %}
 {% if document.read_time or document.show_date %}
+
+<!-- 카테고리, 태그 추가하기위해 패스 추가-->
+{% case site.category_archive.type %}
+  {% when "liquid" %}
+    {% assign path_type = "#" %}
+  {% when "jekyll-archives" %}
+    {% assign path_type = nil %}
+{% endcase %}
+
   <p class="page__meta">
 
-    <!-- 업데이트 날짜도 표시하게함.-->
+    <!-- 업데이트 날짜랑 포스트 날짜랑다르면 업데이트 날짜를 표시하게함.-->
     <span class="page__meta-date">
       {% assign date_format = site.date_format | default: "%B %-d, %Y" %}
-      {% if post.last_modified_at %}
+      {% assign date = document.date %}
+
+      {% capture modified %}
+      {{ post.last_modified_at | date: date_format }}
+      {% endcapture %}
+
+      {% capture posted %}
+      {{ date | date: date_format }}
+      {% endcapture %}
+
+      {% if modified !=  posted %}
         <i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i>Updated by
-        <time datetime="{{ post.last_modified_at | date: "%Y-%m-%d" }}">{{ post.last_modified_at | date: date_format }}&nbsp&nbsp&nbsp</time>
-      {% elsif post.date %}
-        <i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i>Updated by
-        <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: date_format }}&nbsp&nbsp&nbsp</time>
+        <time datetime="{{ post.last_modified_at | date: "%Y-%m-%d" }}">{{ post.last_modified_at | date: date_format }}</time>
+      {% else %}
+        <!-- 포스팅 날짜 -->
+        {% if document.show_date and document.date %}
+          {% assign date = document.date %}
+          <span class="page__meta-date">
+            <i class="far {% if include.type == 'grid' and document.read_time and document.show_date %}fa-fw {% endif %}fa-calendar-alt" aria-hidden="true"></i>
+            {% assign date_format = site.date_format | default: "%B %-d, %Y" %}
+            <time datetime="{{ date | date_to_xmlschema }}">Posted by {{ date | date: date_format }}</time>
+          </span>
+        {% endif %}
       {% endif %}
     </span>
 
+    <br>
 
-    {% if document.show_date and document.date %}
-      {% assign date = document.date %}
-      <span class="page__meta-date">
-        <i class="far {% if include.type == 'grid' and document.read_time and document.show_date %}fa-fw {% endif %}fa-calendar-alt" aria-hidden="true"></i>
-        {% assign date_format = site.date_format | default: "%B %-d, %Y" %}
-        <time datetime="{{ date | date_to_xmlschema }}">Posted by {{ date | date: date_format }}</time>
+    <!-- 카테고리 추가-->
+    <span>
+      <i class="fas fa-fw fa-folder-open" aria-hidden="true"></i>
+      <span itemprop="keywords">
+      {% for category_word in post.categories %}
+        <a href="{{ category_word | slugify | prepend: path_type | prepend: site.category_archive.path | relative_url }}" class="page__taxonomy-item" rel="tag">{{ category_word }}</a>
+      {% endfor %}
       </span>
-    {% endif %}
+    </span>
 
-
-    {% if document.read_time and document.show_date %}
-      <span class="page__meta-sep"></span>{% endif %}
-
-    {% if document.read_time %}
-      {% assign words_per_minute = document.words_per_minute | default: site.words_per_minute | default: 200 %}
-      {% assign words = document.content | strip_html | number_of_words %}
-
-      <span class="page__meta-readtime">
-        <i class="far {% if include.type == 'grid' and document.read_time and document.show_date %}fa-fw {% endif %}fa-clock" aria-hidden="true"></i>
-        {% if words < words_per_minute %}
-          {{ site.data.ui-text[site.locale].less_than | default: "less than" }} 1 {{ site.data.ui-text[site.locale].minute_read | default: "minute read" }}
-        {% elsif words == words_per_minute %}
-          1 {{ site.data.ui-text[site.locale].minute_read | default: "minute read" }}
-        {% else %}
-          {{ words | divided_by: words_per_minute }} {{ site.data.ui-text[site.locale].minute_read | default: "minute read" }}
-        {% endif %}
+    <!--태그추가-->
+    <span>
+      <i class="fas fa-fw fa-tags" aria-hidden="true"></i>
+      <span itemprop="keywords">
+      {% for tag_word in post.tags %}
+        <a href="{{ tag_word | slugify | prepend: path_type | prepend: site.tag_archive.path | relative_url }}" class="page__taxonomy-item" rel="tag">{{ tag_word }}</a>
+      {% endfor %}
       </span>
-    {% endif %}
+    </span>
+
+
   </p>
 {% endif %}
