--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,6 +15,10 @@
       {% include nav_list nav=page.sidebar.nav %}
     {% endif %}
   {% endif %}
-  
+
+  <hr>
+
+  {% include nav_list.html %}
+
   </div>
 {% endif %}
