--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -29,13 +29,11 @@ excerpt: ""
         <header>
           {% if page.title %}<h1 id="page-title" class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
           {% include page__meta.html %}
-          <div class="page__meta" style="margin-top: 0; margin-bottom: 0.7em;">
-            {% include page__taxonomy.html %}
             <!-- 머리말이랑 구분하려고 줄 한개 그었는데 뭔가 위에 테마가 적용이 안됨 그냥 컬러그레이로설정.
           나중에 테마 변경시 호환안됨 무조건 그레이로 남아있음.-->
-            <hr style="border: solid; color:gray">
-          </div>
+          <hr style="border: solid; color:gray;">
         </header>
+
       {% endunless %}
 
       <section class="page__content" itemprop="text">
@@ -67,7 +65,7 @@ excerpt: ""
       <h4 class="page__related-title">{{ site.data.ui-text[site.locale].related_label | default: "You May Also Enjoy" }}</h4>
       <div class="grid__wrapper">
         {% for post in site.related_posts limit:4 %}
-          {% include archive-single.html type="grid" %}
+          {% include archive-single__page.html type="grid" %}
         {% endfor %}
       </div>
     </div>
@@ -80,7 +78,7 @@ excerpt: ""
           {% if post.id == page.id %}
             {% continue %}
           {% endif %}
-          {% include archive-single.html type="grid" %}
+          {% include archive-single__page.html type="grid" %}
         {% endfor %}
       </div>
     </div>
