--- a/_includes/post_pagination.html
+++ b/_includes/post_pagination.html
@@ -1,14 +1,32 @@
-{% if page.previous or page.next %}
+<!--첫 번째 문단-->
+{% assign categories = page.categories[0] %}
+{% assign post_list = site.categories[categories] %}
+{% for post in post_list %}
+  {% if post.url == page.url %}
+  	{% assign prevIndex = forloop.index0 | minus: 1 %}
+  	{% assign nextIndex = forloop.index0 | plus: 1 %}
+  	{% if forloop.first == false %}
+  	  {% assign next_post = post_list[prevIndex] %}
+  	{% endif %}
+  	{% if forloop.last == false %}
+  	  {% assign prev_post = post_list[nextIndex] %}
+  	{% endif %}
+  	{% break %}
+  {% endif %}
+{% endfor %}
+
+{% if prev_post or next_post %}
+<span>{{page.categories[0]}}내 다른 글 보기</span>
   <nav class="pagination">
-    {% if page.previous %}
-      <a href="{{ page.previous.url | relative_url }}" class="pagination--pager" title="{{ page.previous.title | markdownify | strip_html }}">{{ site.data.ui-text[site.locale].pagination_previous | default: "Previous" }}</a>
+    {% if prev_post %}
+      <a href="{{ prev_post.url | relative_url }}" class="pagination--pager"><span style="color:gray">이전 글</span>&nbsp{{prev_post.title}}</a>
     {% else %}
-      <a href="#" class="pagination--pager disabled">{{ site.data.ui-text[site.locale].pagination_previous | default: "Previous" }}</a>
+      <a href="#" class="pagination--pager disabled">첫 번째 글입니다.</a>
     {% endif %}
-    {% if page.next %}
-      <a href="{{ page.next.url | relative_url }}" class="pagination--pager" title="{{ page.next.title | markdownify | strip_html }}">{{ site.data.ui-text[site.locale].pagination_next | default: "Next" }}</a>
+    {% if next_post %}
+      <a href="{{next_post.url | relative_url }}" class="pagination--pager"><span style="color:gray">다음 글</span>&nbsp{{next_post.title}}</a>
     {% else %}
-      <a href="#" class="pagination--pager disabled">{{ site.data.ui-text[site.locale].pagination_next | default: "Next" }}</a>
+      <a href="#" class="pagination--pager disabled">가장 최근 글입니다.</a>
     {% endif %}
   </nav>
 {% endif %}
