--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -50,10 +50,12 @@
      Post pagination navigation links
      ========================================================================== */
 
+
+
 .pagination {
   @include clearfix();
   float: left;
-  margin-top: 1em;
+  margin-top: 0em;
   padding-top: 1em;
   width: 100%;
 
@@ -120,9 +122,9 @@
   /* next/previous buttons */
   &--pager {
     display: block;
-    padding: 1em 2em;
-    float: left;
-    width: 50%;
+    padding: 0.25em 0.25em;
+    //float: left;
+    width: 100%;
     font-family: $sans-serif;
     font-size: $type-size-5;
     font-weight: bold;
@@ -200,7 +202,7 @@
       margin-left: 0;
     }
   }
-  
+
   img{
     -webkit-transition: none;
     transition: none;
