--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,10 +17,12 @@ layout: archive
 
 {% assign entries_layout = page.entries_layout | default: 'list' %}
 
+{% assign sorted_posts = site.posts | sort:"last_modified_at" | reverse%}
+
 <div class="entries-{{ entries_layout }}">
-  {% for post in posts %}
+  {% for post in sorted_posts %}
     {% include archive-single__category_tag.html type=entries_layout %}
-    <hr>
+    <hr style = 'margin: 0.15em 0;'>
   {% endfor %}
 
 </div>
