--- a/_includes/nav_list.html
+++ b/_includes/nav_list.html
@@ -4,7 +4,7 @@
 </li>
 
 {% for category in site.categories %}
-  <div class="author__content">
+  <div class="author__content" style='margin:0.2em 0'>
     <a href="/categories/{{category[0]}}">{{category[0]}}({{category[1].size}})</a>
   </div>
 {% endfor %}
