--- a/_includes/page__meta.html
+++ b/_includes/page__meta.html
@@ -44,8 +44,9 @@
     <span>
       <i class="fas fa-fw fa-folder-open" aria-hidden="true"></i>
       <span itemprop="keywords">
+      Categories:
       {% for category_word in page.categories %}
-        <a href="{{ category_word | slugify | prepend: path_type | prepend: site.category_archive.path | relative_url }}" class="page__taxonomy-item" rel="tag">{{ category_word }}</a>
+        <a href="{{ category_word | slugify | prepend: path_type | prepend: site.category_archive.path | relative_url }}" class="page__taxonomy-item-category" rel="tag">{{ category_word }}</a>
       {% endfor %}
       </span>
     </span>
@@ -54,6 +55,7 @@
     <span>
       <i class="fas fa-fw fa-tags" aria-hidden="true"></i>
       <span itemprop="keywords">
+        Tags: 
       {% for tag_word in page.tags %}
         <a href="{{ tag_word | slugify | prepend: path_type | prepend: site.tag_archive.path | relative_url }}" class="page__taxonomy-item" rel="tag">{{ tag_word }}</a>
       {% endfor %}
