--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -1,6 +1,11 @@
 /* ==========================================================================
    BASE ELEMENTS
    ========================================================================== */
+   .center {
+     display: block;
+     margin: auto;
+   }
+
 
 html {
   /* sticky footer fix */
