--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -156,8 +156,13 @@ $max-width: $x-large !default;
    ========================================================================== */
 
 $right-sidebar-width-narrow:200px !default; // default 200px
-$right-sidebar-width: 270px !default;        // default 300px
-$right-sidebar-width-wide: 350px !default;   // default 400px
+$right-sidebar-width: 200px !default;        // default 300px
+$right-sidebar-width-wide: 200px !default;   // default 400px
+
+// $right-sidebar-width-narrow: 200px !default;
+// $right-sidebar-width: 300px !default;
+// $right-sidebar-width-wide: 400px !default;
+// 원래 코드 - 사이드 여백 너무 많아서 수정
 
 /*
    Other
