--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@ layout: archive
 
 {% assign entries_layout = page.entries_layout | default: 'list' %}
 
-{% assign sorted_posts = site.posts | sort:"last_modified_at" | reverse%}
+{% assign sorted_posts = posts | sort:"last_modified_at" | reverse%}
 
 <div class="entries-{{ entries_layout }}">
   {% for post in sorted_posts %}
