--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,6 +16,12 @@
     {% endif %}
   {% endif %}
 
+  <!--hits 방문자 수-->
+  <hr>
+  <a href="https://hits.seeyoufarm.com">
+    <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2Fgjbae1212%2Fhit-counter&count_bg=%235D5D5D&title_bg=%235D5D5D&icon=nintendogamecube.svg&icon_color=%23E7E7E7&title=%EB%B0%A9%EB%AC%B8%EC%9E%90&edge_flat=false"/>
+  </a>
+
   <hr>
 
   {% include nav_list.html %}
