--- a/_sass/minimal-mistakes/skins/_dark.scss
+++ b/_sass/minimal-mistakes/skins/_dark.scss
@@ -8,7 +8,8 @@ $text-color: #eaeaea !default;
 $primary-color: #00adb5 !default;
 $border-color: mix(#fff, $background-color, 20%) !default;
 // $code-background-color: mix(#000, $background-color, 15%) !default;
-$code-background-color: #5D5D5D !default;
+// $code-background-color: #5D5D5D !default;
+$code-background-color: #263238 !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
 $form-background-color: mix(#000, $background-color, 15%) !default;
 $footer-background-color: #5D5D5D !default; //mix(#000, $background-color, 30%) !default;
