--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,10 +17,11 @@
   {% endif %}
 
   <!--hits 방문자 수-->
-  <hr>
+  <!-- https://hits.seeyoufarm.com/ -->
+  <!-- <hr>
 
   <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Flubiksss.github.io&count_bg=%235D5D5D&title_bg=%235D5D5D&icon=nintendogamecube.svg&icon_color=%23E7E7E7&title=%EB%B0%A9%EB%AC%B8%EC%9E%90&edge_flat=false"
-  style = 'width: auto;'/>
+  style = 'width: auto;'/> -->
 
   <hr>
   {% include nav_list.html %}
