--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,8 +25,10 @@
   <hr>
   {% include nav_list.html %}
   <hr>
-
-  <a href='https://lubiksss.github.io/blog/cheeting_sheet/'>Cheeting Sheet</a>
+  <div class="author__content" style='margin:0.2em 0'>
+    <a href='https://lubiksss.github.io/blog/cheeting_sheet/'>Cheeting
+      Sheet</a>
+  </div>
   <hr>
 
 </div>
