--- a/_sass/minimal-mistakes/skins/_dark.scss
+++ b/_sass/minimal-mistakes/skins/_dark.scss
@@ -3,18 +3,16 @@
    ========================================================================== */
 
 /* Colors */
-$background-color: #23262e !default; //#252a34 !default;
-$text-color: #eaeaea !default;
-$primary-color: #00adb5 !default;
-$border-color: mix(#fff, $background-color, 20%) !default;
-// $code-background-color: mix(#000, $background-color, 15%) !default;
-// $code-background-color: #5D5D5D !default;
+$background-color: #22272e !default;//#252a34 !default;
+$text-color: #aebac7 !default;
+$primary-color: #5b9ae8 !default;
+$border-color: #454c53 !default;
 $code-background-color: #263238 !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
 $form-background-color: mix(#000, $background-color, 15%) !default;
-$footer-background-color: #5D5D5D !default; //mix(#000, $background-color, 30%) !default;
-$link-color: mix($primary-color, $text-color, 40%) !default;
-$link-color-hover: mix(#fff, $link-color, 25%) !default;
+$footer-background-color: #2c333b !default;
+$link-color: #5b9ae8 !default;
+$link-color-hover: #aebac7 !default;
 $link-color-visited: mix(#000, $link-color, 25%) !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: mix(#000, $text-color, 20%) !default;
