STYLE: Change default theme

--- a/_includes/archive-single__category_tag.html
+++ b/_includes/archive-single__category_tag.html
@@ -26,7 +26,7 @@
 
     <span class="archive__item-title">
       <strong>
-        <a href="{{ post.url | relative_url }}" style = 'color:#3E7B84'rel="permalink">{{ title }}</a>
+        <a href="{{ post.url | relative_url }}" >{{ title }}</a>
       </strong>
     </span>
 
