--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -53,14 +53,14 @@
         </li>
       {% endif %}
 
-      {% if author.email %}
-        <li>
-          <a href="mailto:{{ author.email }}">
-            <meta itemprop="email" content="{{ author.email }}" />
-            <i class="fas fa-fw fa-envelope-square" aria-hidden="true"></i><span class="label">{{ site.data.ui-text[site.locale].email_label | default: "Email" }}</span>
-          </a>
-        </li>
-      {% endif %}
+<!--      {% if author.email %}-->
+<!--        <li>-->
+<!--          <a href="mailto:{{ author.email }}">-->
+<!--            <meta itemprop="email" content="{{ author.email }}" />-->
+<!--            <i class="fas fa-fw fa-envelope-square" aria-hidden="true"></i><span class="label">{{ site.data.ui-text[site.locale].email_label | default: "Email" }}</span>-->
+<!--          </a>-->
+<!--        </li>-->
+<!--      {% endif %}-->
 
       {% if author.keybase %}
         <li>
