STYLE: Change author profile wrap button

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -29,7 +29,8 @@
   </div>
 
   <div class="author__urls-wrapper">
-    <button class="btn btn--inverse">{{ site.data.ui-text[site.locale].follow_label | remove: ":" | default: "Follow" }}</button>
+    <button class="btn btn--inverse" style="background-color: #2c333b; color: #aebac7; border: 1px solid #aebac7">
+      {{ site.data.ui-text[site.locale].follow_label | remove: ":" | default: "Follow" }}</button>
     <ul class="author__urls social-icons">
       {% if author.location %}
         <li itemprop="homeLocation" itemscope itemtype="https://schema.org/Place">
