STYLE: Change home entry list border-bottom

--- a/_includes/archive-single__category_tag.html
+++ b/_includes/archive-single__category_tag.html
@@ -22,7 +22,7 @@
 {% endcase %}
 
 <div class="{{ include.type | default: 'list' }}__item">
-  <article class="archive__item">
+  <article class="archive__item" style="border-bottom: 1px solid #454c53; padding-bottom: 0.15em">
 
     <span class="archive__item-title">
       <strong>
