--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@ layout: archive
 <div class="entries-{{ entries_layout }}">
   {% for post in sorted_posts %}
     {% include archive-single__category_tag.html type=entries_layout %}
-    <hr style = 'margin: 0.15em 0;'>
+<!--    <hr style = 'margin: 0.15em 0;'>-->
   {% endfor %}
 
 </div>
