FIX: Fix css link problem

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,6 +1,8 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
-<link rel="icon" type="image/png" href="/assets/images/favicon.ico">
+<link href="/assets/images/favicon.ico" rel="icon" type="image/png">
+<!--customize css-->
+<link href="/assets/css/jake.css" rel="stylesheet">
 
 <!-- end custom head snippets -->
