--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,13 +16,12 @@
 
 <!-- For all browsers -->
 <link href="{{ '/assets/css/main.css' | relative_url }}" rel="stylesheet">
-<link as="style" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css" onload="this.onload=null;this.rel='stylesheet'"
+<link as="style" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css"
+      onload="this.onload=null;this.rel='stylesheet'"
       rel="preload">
 <noscript>
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css" rel="stylesheet">
 </noscript>
-<!--customize css-->
-<link href="assets/css/jake.css" rel="stylesheet">
 
 {% if site.head_scripts %}
 {% for script in site.head_scripts %}
