--- a/_includes/archive-single__category_tag.html
+++ b/_includes/archive-single__category_tag.html
@@ -11,7 +11,6 @@
 {% endif %}
 
 {% assign document = post | default: page %}
-{% if document.read_time or document.show_date %}
 
 <!-- 카테고리, 태그 추가하기위해 패스 추가-->
 {% case site.category_archive.type %}
@@ -21,69 +20,52 @@
 {% assign path_type = nil %}
 {% endcase %}
 
+<!--날짜관련-->
+{% assign date_format = site.date_format | default: "%B %-d, %Y" %}
+{% assign date = document.date %}
+
 <div class="{{ include.type | default: 'list' }}__item">
-  <article class="archive__item" style="border-bottom: 1px solid #454c53; padding-bottom: 0.15em">
+    <article class="archive__item"
+             style="border-bottom: 1px solid #454c53; padding-top: 0.15em; display: grid; grid-template-columns: 1fr 1fr">
 
-    <span class="archive__item-title">
-      <strong>
-        <a href="{{ post.url | relative_url }}" >{{ title }}</a>
-      </strong>
-    </span>
-
-    <span class="page__meta">
-
-      <!-- 업데이트 날짜랑 포스트 날짜랑다르면 업데이트 날짜를 표시하게함.-->
-      <span class="page__meta-date"">
-        {% assign date_format = site.date_format | default: "%B %-d, %Y" %}
-        {% assign date = document.date %}
-
-        {% capture modified %}
-        {{ post.last_modified_at | date: date_format }}
-        {% endcapture %}
-
-        {% capture posted %}
-        {{ date | date: date_format }}
-        {% endcapture %}
-
-        {% if modified !=  posted %}
-        <i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i>
-        <time datetime="{{ post.last_modified_at | date: "%Y-%m-%d" }}">{{ post.last_modified_at | date: date_format }}</time>
-
-        <!-- 포스팅 날짜 -->
-        {% else %}
-        {% if document.show_date and document.date %}
-        {% assign date = document.date %}
-        <span class="page__meta-date">
-          <i class="far {% if include.type == 'grid' and document.read_time and document.show_date %}fa-fw {% endif %}fa-calendar-alt" aria-hidden="true"></i>
-          {% assign date_format = site.date_format | default: "%B %-d, %Y" %}
-          <time datetime="{{ date | date_to_xmlschema }}">{{ date | date: date_format }}</time>
+        <span class="archive__item-title" style="margin-bottom: 0px">
+          <strong>
+            <a href="{{ post.url | relative_url }}">{{ title }}</a>
+          </strong>
         </span>
-        {% endif %}
-        {% endif %}
-      </span>
 
-      <!-- 카테고리 추가-->
-      <span>
-        <i class="fas fa-fw fa-folder-open" aria-hidden="true"></i>
-        <span itemprop="keywords">
-          {% for category_word in post.categories %}
-          <a href="{{ category_word | slugify | prepend: path_type | prepend: site.category_archive.path | relative_url }}" class="page__taxonomy-item-category" style = "margin-bottom:0; margin-top:0" rel="tag">{{ category_word }}</a>
-          {% endfor %}
+        <span class="page__meta" style="display: grid; grid-template-columns: 1fr 1fr">
+
+            <!--날짜 추가-->
+            <span style="padding-top: 5px">
+                <i aria-hidden="true" class="fas fa-fw fa-calendar-alt"></i>
+                  <time datetime="{{ date | date_to_xmlschema }}">{{ date | date: date_format }}</time>
+            </span>
+
+            <!-- 카테고리 추가-->
+            <span>
+                <i aria-hidden="true" class="fas fa-fw fa-folder-open"></i>
+                <span>
+                  {% for category_word in post.categories %}
+                  <a class="page__taxonomy-item-category"
+                     href="{{ category_word | slugify | prepend: path_type | prepend: site.category_archive.path | relative_url }}"
+                     rel="tag"
+                     style="margin-bottom:0; margin-top:0">{{ category_word }}</a>
+                  {% endfor %}
+                </span>
+            </span>
+
+            <!-- 태그추가-->
+            <!--            <span>-->
+            <!--                <i aria-hidden="true" class="fas fa-fw fa-tags"></i>-->
+            <!--                <span itemprop="keywords">-->
+            <!--                  {% for tag_word in post.tags %}-->
+            <!--                  <a class="page__taxonomy-item"-->
+            <!--                     href="{{ tag_word | slugify | prepend: path_type | prepend: site.tag_archive.path | relative_url }}"-->
+            <!--                     rel="tag" style="margin-bottom:0; margin-top:0">{{ tag_word }}</a>-->
+            <!--                  {% endfor %}-->
+            <!--                </span>-->
+            <!--            </span>-->
         </span>
-      </span>
-
-      <!--태그추가-->
-      <span>
-        <i class="fas fa-fw fa-tags" aria-hidden="true"></i>
-        <span itemprop="keywords">
-          {% for tag_word in post.tags %}
-          <a href="{{ tag_word | slugify | prepend: path_type | prepend: site.tag_archive.path | relative_url }}" class="page__taxonomy-item" style = "margin-bottom:0; margin-top:0" rel="tag">{{ tag_word }}</a>
-          {% endfor %}
-        </span>
-      </span>
-
-
-    </span>
-    {% endif %}
-  </article>
+    </article>
 </div>
