STYLE: Remove category tag list hr

--- a/_includes/archive-single__category_tag.html
+++ b/_includes/archive-single__category_tag.html
@@ -28,7 +28,7 @@
     <article class="archive__item"
              style="border-bottom: 1px solid #454c53; padding-top: 0.15em; display: grid; grid-template-columns: 1fr 1fr">
 
-        <span class="archive__item-title" style="margin-bottom: 0px">
+        <span class="archive__item-title" style="margin-bottom: 0px; margin-top: 0px">
           <strong>
             <a href="{{ post.url | relative_url }}">{{ title }}</a>
           </strong>
