STYLE: Change category navigator

--- a/_includes/nav_list.html
+++ b/_includes/nav_list.html
@@ -1,6 +1,6 @@
 {% assign sum = site.posts | size %}
 <li>
-  📂 전체 글 수 {{sum}}개
+    📂 전체 글 수 {{sum}}개
 </li>
 
 
@@ -13,13 +13,14 @@
 {% endfor %}
 
 <div style="padding-left: 15px">
-{% for i in (1..categories_max) reversed %}
-{% for category in site.categories reversed%}
-{% if category[1].size == i %}
-<span style='margin:0.2em 0'>
-  <a href="/categories/{{category[0]}}" style="color: #aebac7;">{{category[0]}}({{category[1].size}})</a>
-</span>
-{% endif %}
-{% endfor %}
-{% endfor %}
+    {% for i in (1..categories_max) reversed %}
+    {% for category in site.categories reversed%}
+    {% if category[1].size == i %}
+    <span style='margin:0.2em 0'>
+          <a href="/categories/#{{category[0] | slugify}}"
+             style="color: #aebac7;">{{category[0]}}({{category[1].size}})</a>
+    </span>
+    {% endif %}
+    {% endfor %}
+    {% endfor %}
 </div>
