--- a/_sass/minimal-mistakes/skins/_dark.scss
+++ b/_sass/minimal-mistakes/skins/_dark.scss
@@ -3,7 +3,7 @@
    ========================================================================== */
 
 /* Colors */
-$background-color: #22272e !default;//#252a34 !default;
+$background-color: #22272e !default; //#252a34 !default;
 $text-color: #aebac7 !default;
 $primary-color: #5b9ae8 !default;
 $border-color: #454c53 !default;
@@ -13,7 +13,8 @@ $form-background-color: mix(#000, $background-color, 15%) !default;
 $footer-background-color: #2c333b !default;
 $link-color: #5b9ae8 !default;
 $link-color-hover: mix(#fff, $link-color, 25%) !default;
-$link-color-visited: mix(#000, $link-color, 25%) !default;
+//$link-color-visited: mix(#000, $link-color, 25%) !default;
+$link-color-visited: $primary-color !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: mix(#000, $text-color, 20%) !default;
 $navicon-link-color-hover: mix(#000, $background-color, 30%) !default;
@@ -21,7 +22,7 @@ $navicon-link-color-hover: mix(#000, $background-color, 30%) !default;
 .author__urls.social-icons i,
 .author__urls.social-icons .svg-inline--fa,
 .page__footer-follow .social-icons i,
-.page__footer-follow .social-icons .svg-inline--fa  {
+.page__footer-follow .social-icons .svg-inline--fa {
   color: inherit;
 }
 
