STYLE: Change category icon color

--- a/_includes/archive-single__category_tag.html
+++ b/_includes/archive-single__category_tag.html
@@ -50,7 +50,7 @@
                   <a class="page__taxonomy-item-category"
                      href="{{ category_word | slugify | prepend: path_type | prepend: site.category_archive.path | relative_url }}"
                      rel="tag"
-                     style="margin-bottom:0; margin-top:0">{{ category_word }}</a>
+                     style="margin-bottom:0; margin-top:0; background-color: #2c333b;">{{ category_word }}</a>
                   {% endfor %}
                 </span>
             </span>
