--- a/_includes/nav_list.html
+++ b/_includes/nav_list.html
@@ -1,9 +1,3 @@
-{% assign sum = site.posts | size %}
-<li>
-    📂 전체 글 수 {{sum}}개
-</li>
-
-
 <!-- 카테고리를 카테고리 내 갯수별로 정렬-->
 {% assign categories_max = 0 %}
 {% for category in site.categories %}
@@ -12,14 +6,14 @@
 {% endif %}
 {% endfor %}
 
-<div style="padding-left: 15px">
+<div class="author__content">
     {% for i in (1..categories_max) reversed %}
     {% for category in site.categories reversed%}
     {% if category[1].size == i %}
-    <span style='margin:0.2em 0'>
+    <div style='margin: 5px 5px 5px 0px; display: inline-block'>
           <a href="/categories/#{{category[0] | slugify}}"
              style="color: #aebac7;">{{category[0]}}({{category[1].size}})</a>
-    </span>
+    </div>
     {% endif %}
     {% endfor %}
     {% endfor %}
