REFACTOR: Fix typo

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,7 +32,7 @@
   {% include nav_list.html %}
   <hr>
   <div class="author__content" style='margin:0.2em 0'>
-    <a href='/blog/cheeting_sheet/'>Cheeting
+    <a href='/blog/cheeting_sheet/'>Cheating
       Sheet</a>
   </div>
   <hr>
