--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,7 +25,7 @@
   <hr>
   {% assign sum = site.posts | size %}
   <div class="author__content" style='margin:0.2em 0; font-size: 0.8em'>
-    <a href='/blog/cheeting_sheet/'>📂&nbsp 전체 글 수 {{sum}}개</a>
+    <a href='/categories'>📂&nbsp 전체 글 수 {{sum}}개</a>
   </div>
 
   <hr>
