STYLE: Change image style

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,9 +9,9 @@ layout: archive
 -->
 <!--right sidebar-->
 <aside class="sidebar__right sticky">
-    <img alt="" class=img_large src="/assets/images/test1.jpeg" style="margin-bottom: 1em; width: 100%">
-    <img alt="" class=img_large src="/assets/images/test2.gif" style="margin-bottom: 1em; width: 100%">
-    <img alt="" class=img_small src="/assets/images/test3.gif" style="margin-bottom: 1em; width: 100%">
+    <img alt="" class=img_large src="/assets/images/test1.jpeg">
+    <img alt="" class=img_large src="/assets/images/test2.gif">
+    <img alt="" class=img_small src="/assets/images/test3.gif">
 </aside>
 
 <div style="float: left; width: 100%">
