--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: archive
 -->
 <!--right sidebar-->
 <aside class="sidebar__right sticky">
-    <img alt="" class=img_large src="/assets/images/test1.jpeg">
+    <img alt="" class=img_large src="/assets/images/test4.gif">
     <img alt="" class=img_large src="/assets/images/test2.gif">
     <img alt="" class=img_small src="/assets/images/test3.gif">
 </aside>
