style: Change title

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -3,6 +3,6 @@
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 <link href="/assets/images/favicon.ico" rel="icon" type="image/png">
 <!--customize css-->
-<link href="/assets/css/jake.css" rel="stylesheet">
+<link href="/assets/css/lubiksss.css" rel="stylesheet">
 
 <!-- end custom head snippets -->
